[project]
name = "gtk4-rs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = [
    "meson>=1.5.1",
    "ninja>=1.11.1.1",
    "setuptools>=75.1.0",
    "packaging>=24.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gtk4_rs"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
gtk4-rs = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cairo = ">=1.18.0,<2"
graphene = ">=3.3,<4"
