[project]
name = "gtk4-rs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = [
    "setuptools>=75.1.0",
    "packaging>=24.1",
    "jinja2>=3.1.4",
    "gvsbuild",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
link-mode = "copy"

[tool.uv.pip]
universal = true

[tool.uv.sources]
gvsbuild = { git = "https://github.com/joelvaneenwyk/gvsbuild" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gtk4_rs"]

[dependency-groups]
dev = [
    "cmake>=3.31.4",
    "meson>=1.7.0",
    "ninja>=1.11.1.3",
    "ruff>=0.9.5",
]
